# observation-harvester

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
examples/: milltown_codex_run.json  milltown_task.json  ph_commercial_leads.json
profiles/: commercial_business.json  public_venues.json
prompts/: building_type_agent.md  prompted_investigation.md  review_candidate.md  scheduled_harvest.md
src/pdt_observer/: __init__.py  __main__.py  agent.py  cli.py  config.py  leads.py  mock_data.py  mock_services.py  models.py  ports.py  profiles.py  prompting.py  time_context.py  validation.py  web.py  workflow.py
tests/: test_cli.py  test_mock_services.py  test_models.py  test_profiles.py  test_time_context.py  test_validation.py  test_web.py  test_workflow.py
