[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdt-observer"
version = "0.1.0"
description = "Bounded PDT observation-harvesting proof of concept."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.6.0",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
pdt-observer = "pdt_observer.cli:console"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "live: tests that may call external services and require explicit opt-in",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["pdt_observer"]
strict = true
warn_unused_ignores = true
